--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/sashweb1.png" width="200" height="200" alt="Sashmitamakeoverartistry"></td>
-      <td><h1>Sashmita's First Website</h1>
+      <td><img src="images/sashweb1.png" width="200" height="200" alt="SashmitaMakeoverartistry"></td>
+      <td>
+        <h1>Sashmita's First Website</h1>
 
       <p><em>Founder and CEO of the <strong><a href="https://instagram.com/makeoverbysash">Sashmita Personal Website</a></strong>.</em></p>
       <p>I am a Web Developer and a Makeup Arist.</p></td>
@@ -64,7 +65,7 @@
       </tr>
     </table>
     <br>
-<a href="Hobbies.html">My Hobbies</a><br>
+<a href="hobbies.html">My Hobbies</a><br>
 <a href="contact.html">Contact Me</a>
 </body>
 </html>
