--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </tr>
     </table>
     <br>
-<a href="hobbies.html">My Hobbies</a><br>
+<a href="Hobbies.html">My Hobbies</a><br>
 <a href="contact.html">Contact Me</a>
 </body>
 </html>
